--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2720,7 +2720,7 @@ body {
 	width: 45%;
 	height: auto;
 	background: url(../../images/SCALI_ST1_02_Hero_Dusk_view_R1.jpg) center/cover no-repeat;
-	background-position: 58% 25%;
+	background-position: 85% 25%;
 }
 
 .le .parag2 {
@@ -2750,6 +2750,13 @@ body {
 }
 
 #check-modal {}
+
+.textBelowSummit {
+	line-height: normal;
+	text-align: left;
+	padding: 20px;
+	font-size: 0.75em !important;
+}
 
 .close-btn-thanx {
 	cursor: pointer;
@@ -3442,16 +3449,15 @@ img {
 }
 
 .side-l {
-	width: auto;
-	height: 100%;
 	display: flex;
+	width: 25vw;
+	padding-left: 10px;
+	padding-top: 42px;
+	padding-bottom: 30px;
 	flex-direction: column;
-	align-content: center;
-	align-items: center;
-	padding-top: 0.8em;
-	/* padding-left: 0%; */
+	align-content: flex-start;
 	justify-content: center;
-	margin-right: 28px;
+	align-items: flex-start;
 }
 
 .side-l a {
@@ -3512,9 +3518,9 @@ img {
 }
 
 .logo2down {
-	width: 97%;
-	min-width: 100px;
-	max-width: 956px;
+	width: 20vw;
+	min-width: 280px;
+	max-width: 1368px;
 	height: auto;
 	position: relative;
 	left: 0%;
@@ -3522,41 +3528,43 @@ img {
 	margin-bottom: 0%;
 	margin-top: 0%;
 	margin-left: 0%;
+	padding: 2px;
 }
 
 .adress {
-	font-size: 1.35vw;
+	font-size: 1.35em;
 	font-family: "Brinnan-Light";
 	color: #ffffff;
 	margin-left: 0px;
 	margin-right: 0%;
 	margin-bottom: 0;
 	width: 100%;
-	height: 1%;
-	text-align: center;
+	/* height: 1%; */
+	text-align: left;
 	position: relative;
-	padding: 3px;
+	/* padding: 3px; */
 }
 
 
 .logo-fifth {
-	left: 31%;
+	left: 0%;
 	height: auto;
-	width: 48%;
+	width: 94%;
 	max-width: 740px;
 	position: relative;
-	min-width: 100px;
+	min-width: 30px;
 }
 
 .side-r {
 	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
-	align-items: stretch;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: flex-start;
 	height: auto;
-	width: 26%;
+	width: 25vw;
 	flex-wrap: nowrap;
+	margin-top: 15px;
+	margin-right: 26px;
 }
 
 .container-icons {
@@ -3640,13 +3648,24 @@ img {
 }
 
 .privacy {
-	line-height: 1.48em;
+	line-height: 5em;
 	font-size: 0.74em;
 	font-family: Brinnan-Light;
 	color: #ffffff;
-	text-align: center;
+	text-align: left;
+	white-space: nowrap;
+	margin-bottom: 0;
+	white-space: nowrap;
 }
 
+.disclaimer {
+	line-height: normal;
+	font-size: 0.5em;
+	font-family: Brinnan-Light;
+	color: #cdcdcd;
+	width: 95vw;
+	text-align: justify;
+}
 
 .logodown {
 	display: block;
@@ -3720,11 +3739,11 @@ img {
 	-moz-align-items: center;
 	-webkit-align-items: center;
 	-ms-align-items: center;
-	align-items: center;
+	align-items: stretch;
 	-moz-justify-content: space-between;
 	-webkit-justify-content: space-between;
 	-ms-justify-content: space-between;
-	justify-content: center;
+	justify-content: space-between;
 	position: relative;
 	margin: 0;
 	line-height: 1em;
@@ -3736,6 +3755,9 @@ img {
 	flex-wrap: nowrap;
 	align-content: stretch;
 	caret-color: transparent;
+	width: 100%;
+	height: auto;
+	padding: 8px;
 }
 
 #footer>* {
