--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3544,6 +3544,10 @@ img {
 	padding: 2px;
 }
 
+p.adress {
+	text-decoration: none;
+}
+
 .adress {
 	font-size: 1.35em;
 	font-family: "Brinnan-Light";
@@ -3708,7 +3712,7 @@ img {
 }
 
 
-@media screen and (max-width: 1920px) {
+/* @media screen and (max-width: 1920px) {
 
 	.main.style2 .content {
 		width: 40%;
@@ -3740,7 +3744,7 @@ img {
 		max-width: calc(100% - 1.5em);
 	}
 
-}
+} */
 
 /* Footer */
 
@@ -3963,10 +3967,10 @@ img {
 
 
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
 
 	#contact .box {
 		padding: 1em 1em 2em 1em;
 	}
 
-}
+} */
