--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -11,9 +11,7 @@
         margin-right: 6vw;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
+
 }
 
 @media (max-width: 9998px) {
@@ -29,9 +27,7 @@
         margin-right: 6vw;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
+
 }
 
 @media(max-width:5140px) {
@@ -40,9 +36,7 @@
         margin-right: 4vw;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
+
 }
 
 
@@ -52,9 +46,7 @@
         margin-right: 4vw;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
+
 }
 
 @media screen and (min-width: 2090px) and (max-width: 13440px) and (min-height: 1080px) {
@@ -75,9 +67,7 @@
         width: 93vw;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
+
 }
 
 
@@ -87,9 +77,6 @@
         margin-right: 2vw;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
 }
 
 @media(max-width:1680px) {
@@ -107,9 +94,6 @@
         width: 93vw;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
 }
 
 @media (max-width: 1436px) {
@@ -127,9 +111,7 @@
         margin: 3%;
     }
 
-    .whiteSpace {
-        white-space: nowrap;
-    }
+
 }
 
 @media (max-width: 1319px) {
@@ -170,9 +152,7 @@
         align-items: flex-start;
     }
 
-    .whiteSpace {
-        white-space: wrap;
-    }
+
 
 
 }
@@ -209,9 +189,6 @@
         width: 37vw;
     }
 
-    .whiteSpace {
-        white-space: wrap;
-    }
 
 }
 
@@ -222,6 +199,27 @@
         padding: 0;
 
 
+    }
+    #intro {
+        background: url(../../images/mobile/SCALI_14_Vignette_B.webp);
+        background-size: cover;
+        background-attachment: fixed, fixed;
+        background-position: left, bottom center;
+        background-repeat: repeat, no-repeat;
+        caret-color: transparent;
+    }
+    #six {
+        background: url(../../images/mobile/SCALI_ST1_13_Vignette_A_GIFT_R1_MOBILE.webp);
+        height: 40vh !important;
+        min-height: 20vh !important;
+        background-size: cover;
+
+    }
+    .left-half {
+        width: 45%;
+        height: auto;
+        background: url(../../images/mobile/SCALI_ST1_02_Hero_Dusk_view_R1.webp) center/cover no-repeat;
+        background-position: 85% 25%;
     }
 
     .main.style1 {
@@ -248,8 +246,8 @@
     }
 
     .text_sec1 {
-        margin-left: 6vw;
-        margin-top: 40%;
+        margin-left: 11vw;
+        margin-top: 20%;
     }
 
     .icon-center {
@@ -269,10 +267,6 @@
         flex-direction: column;
         align-items: center;
         line-height: normal;
-    }
-
-    .whiteSpace {
-        white-space: wrap;
     }
 
 
@@ -362,11 +356,7 @@
     }
 
 
-    .left-half {
-        width: 100%;
-        min-height: 34vh;
-        background-position: 59%;
-    }
+
 
     .right-half {
         padding-left: 2em;
@@ -416,13 +406,7 @@
         width: 83vw;
     }
 
-    #six {
-        background: url(../../images/SCALI_ST1_13_Vignette_A_GIFT_R1_MOBILE.jpg);
-        height: 40vh !important;
-        min-height: 20vh !important;
-        background-size: cover;
-        background-attachment: scroll;
-    }
+  
 
     .Streetscape_image {
         height: 40vh;
@@ -646,865 +630,3 @@
 }
 
 
-@media (max-width: 770px) {
-
-
-    body {
-        padding: 0;
-
-
-    }
-
-    .main.style1 {
-        padding: 2px;
-    }
-
-    .header-vertical-line {
-        display: none;
-    }
-
-    .logo {
-        top: 0.1%;
-        height: auto;
-        position: fixed;
-        right: 8%;
-        width: 5% !important;
-        min-width: 100px;
-        padding: 4%;
-    }
-
-    .logo2 {
-        padding: 5%;
-        left: 0;
-    }
-
-    .text_sec1 {
-        margin-left: 6vw;
-        margin-top: 40%;
-    }
-
-    .icon-center {
-        height: auto;
-        width: 18%;
-        position: relative;
-        margin: 0%;
-        padding-top: 54px;
-        padding-bottom: 12px;
-    }
-
-    .text-sec3 {
-        color: white;
-        width: 70vw;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        line-height: normal;
-    }
-
-    .whiteSpace {
-        white-space: wrap;
-
-    }
-
-
-    .quiet3 {
-        line-height: 1.1em;
-        text-align: center;
-        margin-bottom: 10%;
-        margin-top: 2%;
-    }
-
-    .main.style1 h2 {
-        font-size: 4em;
-        margin-top: 12vh;
-    }
-
-    .lifestyle {
-        font-size: 2.4em;
-    }
-
-    .content {
-        width: 61% !important;
-    }
-
-    .parag1 {
-        margin-bottom: 0vh;
-        margin-top: 8vh;
-        font-family: 'Brinnan-Light';
-        font-weight: lighter;
-        font-size: 1.1em;
-    }
-
-    .box.style2 {
-        padding: 1.5em 1.25em 1.5em 1.25em;
-        background-color: rgb(11 27 48);
-        margin-right: 6vw;
-        margin-left: 6vw;
-
-    }
-
-    .main.style2 {
-        padding: 0 15px 0 15px;
-    }
-
-    .bottom-left {
-        display: none;
-    }
-
-    .mainMobile {
-        display: flex;
-        position: relative;
-        margin: 0;
-        overflow-x: hidden;
-        flex-direction: column;
-        justify-content: space-between;
-        align-content: space-around;
-    }
-
-    .box.style3 {
-        top: 2vh;
-        margin-left: 7vw;
-    }
-
-    .main.style2.left.dark.fullscreen .box p {
-        text-align: left;
-        width: 82%;
-        color: #0b1b30;
-    }
-
-    .texttoggle {
-        margin-top: 4vh;
-        margin-left: 0%;
-        font-size: 0.7em;
-
-
-    }
-
-    .t-mobile {
-
-        padding: 2px;
-    }
-
-    .split-section {
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-    }
-
-
-    .left-half {
-        width: 100%;
-        min-height: 34vh;
-        background-position: 59%;
-    }
-
-    .right-half {
-        padding-left: 2em;
-        padding-top: 3em;
-        width: 100%;
-        padding-right: 2em;
-    }
-
-    .div-flex {
-        display: flex !important;
-        justify-content: flex-start;
-        flex-direction: row;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
-    .button {
-        margin-right: 11%;
-    }
-
-    #four {
-        height: 40vh !important;
-        min-height: 20vh !important;
-    }
-
-    .bottom-half {
-        padding: 80px;
-    }
-
-    .left-side {
-        width: 90%;
-        padding: 2em;
-    }
-
-    #five {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .left-side-bottom {
-        flex-direction: column;
-    }
-
-    .map_image {
-        width: 83vw;
-    }
-
-    #six {
-        background: url(../../images/SCALI_ST1_13_Vignette_A_GIFT_R1_MOBILE.jpg);
-        height: 40vh !important;
-        min-height: 20vh !important;
-        background-size: cover;
-        background-attachment: scroll;
-    }
-
-    .Streetscape_image {
-        height: 40vh;
-        top: 48%;
-        width: 100%;
-        object-fit: cover;
-    }
-
-    .tree_frames {
-        flex-direction: column;
-        margin-left: 0;
-    }
-
-    .litle_frame {
-        height: auto;
-        width: 95%;
-        padding: 1.2vw;
-    }
-
-
-    .text3 {
-        bottom: 6%;
-    }
-
-
-
-    /* Estilos gerais do footer */
-    #footer>* {
-        margin: 0 0 0em 0;
-    }
-
-    #footer {
-        display: flex;
-        /* padding: 4px; */
-        /* background-color: #0b1b30; */
-        align-items: center;
-        /* height: auto; */
-        align-content: space-around;
-        flex-wrap: wrap;
-        flex-direction: column-reverse;
-    }
-
-
-
-
-
-    #privacy-modal2 {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 5%;
-        background-color: white;
-        border: 1px solid #ccc;
-        z-index: 1000;
-        max-width: 80%;
-        font-family: 'Brinnan-Light';
-        color: #0b1b30;
-        width: 81%;
-        height: auto;
-    }
-
-    .side-center {
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        align-content: flex-end;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        width: 70%;
-        padding-bottom: 1em;
-    }
-
-
-    .side-center .bl-dow {
-        display: flex;
-        width: 100%;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-content: flex-start;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-    }
-
-    /* .side-center .bl-dow {
-        padding-left: 3vw;
-    } */
-
-    .side-center .lst {
-        width: 183px;
-    }
-
-    .logo-fifth {
-        left: 0;
-        height: auto;
-        width: 15vw;
-        max-width: 358px;
-        position: relative;
-        top: 0;
-        min-width: 14px;
-        right: 0;
-    }
-
-    /* Estilos para o conteúdo do modal */
-    #privacy-content {
-        width: auto;
-        margin: 0 auto;
-        background-color: #fff;
-        padding: 2px;
-        border-radius: 8px;
-        height: auto;
-    }
-
-
-    .container-icons {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 5px;
-    }
-
-    .container-icons img {
-        margin: 0 10px;
-    }
-
-    .privacy {
-        width: 100%;
-        margin-bottom: 0em;
-        bottom: 6px;
-        position: relative;
-        text-align: center;
-    }
-
-    .side-r {
-        padding-bottom: 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        width: 84%;
-        flex-wrap: nowrap;
-        align-content: center;
-        position: relative;
-        top: 0%;
-    }
-
-    .side-l {
-        width: 100vw;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
-        padding-top: 0%;
-        padding-left: 0%;
-        flex-wrap: nowrap;
-        justify-content: center;
-    }
-
-    .disclaimer {
-        line-height: 1.40em;
-        font-size: 0.7em;
-        font-family: Brinnan-Light;
-        color: #cdcdcd;
-        width: 70vw;
-        text-align: center;
-    }
-
-
-
-    .side-center .lst {
-        font-size: 2em;
-        padding-left: 0em;
-        min-width: 163px;
-        text-align: left;
-        padding-left: 10px;
-    }
-
-    h3 {
-        margin: 0%;
-    }
-
-    .menu-footer {
-        display: none;
-    }
-
-    .logodown {
-        display: none;
-    }
-
-    .logo2down {
-        width: 95%;
-        min-width: 100px;
-        max-width: 956px;
-        height: auto;
-        position: relative;
-        left: 0%;
-        padding: 1px;
-        margin-bottom: 0%;
-        margin-top: 0%;
-        margin-left: 0;
-    }
-
-
-    .adress {
-        font-size: 1.35em;
-        font-family: "Brinnan-Light";
-        color: #ffffff;
-        margin-left: 0px;
-        margin-right: 0;
-        margin-bottom: 0;
-        width: 100%;
-        height: 1%;
-        text-align: center;
-        position: relative;
-        padding: 15px;
-    }
-}
-
-
-@media (max-width: 640px) {
-
-
-    body {
-        padding: 0;
-
-
-    }
-
-    .main.style1 {
-        padding: 2px;
-    }
-
-    .header-vertical-line {
-        display: none;
-    }
-
-    .logo {
-        top: 0.1%;
-        height: auto;
-        position: fixed;
-        right: 8%;
-        width: 5% !important;
-        min-width: 100px;
-        padding: 4%;
-    }
-
-    .logo2 {
-        padding: 5%;
-        left: 0;
-    }
-
-    .text_sec1 {
-        margin-left: 6vw;
-        margin-top: 40%;
-    }
-
-    .icon-center {
-        height: auto;
-        width: 18%;
-        position: relative;
-        margin: 0%;
-        padding-top: 54px;
-        padding-bottom: 12px;
-    }
-
-    .text-sec3 {
-        color: white;
-        width: 70vw;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        line-height: normal;
-    }
-
-
-    .quiet3 {
-        line-height: 1.1em;
-        text-align: center;
-        margin-bottom: 10%;
-        margin-top: 2%;
-    }
-
-    .whiteSpace {
-        white-space: wrap;
-
-    }
-
-    .main.style1 h2 {
-        font-size: 4em;
-        margin-top: 12vh;
-    }
-
-    .lifestyle {
-        font-size: 2.4em;
-    }
-
-    .content {
-        width: 61% !important;
-    }
-
-    .parag1 {
-        margin-bottom: 0vh;
-        margin-top: 8vh;
-        font-family: 'Brinnan-Light';
-        font-weight: lighter;
-        font-size: 1.1em;
-    }
-
-    .box.style2 {
-        padding: 1.5em 1.25em 1.5em 1.25em;
-        background-color: rgb(11 27 48);
-        margin-right: 6vw;
-        margin-left: 6vw;
-
-    }
-
-    .main.style2 {
-        padding: 0 15px 0 15px;
-    }
-
-    .bottom-left {
-        display: none;
-    }
-
-    .mainMobile {
-        display: flex;
-        position: relative;
-        margin: 0;
-        overflow-x: hidden;
-        flex-direction: column;
-        justify-content: space-between;
-        align-content: space-around;
-    }
-
-    .box.style3 {
-        top: 2vh;
-        margin-left: 7vw;
-    }
-
-    .main.style2.left.dark.fullscreen .box p {
-        text-align: left;
-        width: 82%;
-        color: #0b1b30;
-    }
-
-    .texttoggle {
-        margin-top: 4vh;
-        margin-left: 0%;
-        font-size: 0.7em;
-
-
-    }
-
-    .t-mobile {
-
-        padding: 2px;
-    }
-
-    .split-section {
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-    }
-
-
-    .left-half {
-        width: 100%;
-        min-height: 34vh;
-        background-position: 59%;
-    }
-
-    .right-half {
-        padding-left: 2em;
-        padding-top: 3em;
-        width: 100%;
-        padding-right: 2em;
-    }
-
-    .div-flex {
-        display: flex !important;
-        justify-content: flex-start;
-        flex-direction: row;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-
-    .button {
-        margin-right: 11%;
-    }
-
-    #four {
-        height: 40vh !important;
-        min-height: 20vh !important;
-    }
-
-    .bottom-half {
-        padding: 80px;
-    }
-
-    .left-side {
-        width: 90%;
-        padding: 2em;
-    }
-
-    #five {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .left-side-bottom {
-        flex-direction: column;
-    }
-
-    .map_image {
-        width: 83vw;
-    }
-
-    #six {
-        background: url(../../images/SCALI_ST1_13_Vignette_A_GIFT_R1_MOBILE.jpg);
-        height: 40vh !important;
-        min-height: 20vh !important;
-        background-size: cover;
-        background-attachment: scroll;
-    }
-
-    .Streetscape_image {
-        height: 40vh;
-        top: 48%;
-        width: 100%;
-        object-fit: cover;
-    }
-
-    .tree_frames {
-        flex-direction: column;
-        margin-left: 0;
-    }
-
-    .litle_frame {
-        height: auto;
-        width: 95%;
-        padding: 1.2vw;
-    }
-
-
-    .text3 {
-        bottom: 6%;
-    }
-
-
-
-    /* Estilos gerais do footer */
-    #footer>* {
-        margin: 0 0 0em 0;
-    }
-
-    #footer {
-        display: flex;
-        /* padding: 4px; */
-        /* background-color: #0b1b30; */
-        align-items: center;
-        /* height: auto; */
-        align-content: space-around;
-        flex-wrap: wrap;
-        flex-direction: column-reverse;
-    }
-
-
-
-
-
-    #privacy-modal2 {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 5%;
-        background-color: white;
-        border: 1px solid #ccc;
-        z-index: 1000;
-        max-width: 80%;
-        font-family: 'Brinnan-Light';
-        color: #0b1b30;
-        width: 81%;
-        height: auto;
-    }
-
-    .side-center {
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        align-content: flex-end;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        width: 70%;
-        padding-bottom: 1em;
-    }
-
-
-    .side-center .bl-dow {
-        display: flex;
-        width: 100%;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-content: flex-start;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-    }
-
-    /* .side-center .bl-dow {
-        padding-left: 3vw;
-    } */
-
-    .side-center .lst {
-        width: 183px;
-    }
-
-    .logo-fifth {
-        left: 0;
-        height: auto;
-        width: 15vw;
-        max-width: 358px;
-        position: relative;
-        top: 0;
-        min-width: 14px;
-        right: 0;
-    }
-
-    /* Estilos para o conteúdo do modal */
-    #privacy-content {
-        width: auto;
-        margin: 0 auto;
-        background-color: #fff;
-        padding: 2px;
-        border-radius: 8px;
-        height: auto;
-    }
-
-
-    .container-icons {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 5px;
-    }
-
-    .container-icons img {
-        margin: 0 10px;
-    }
-
-    .privacy {
-        width: 100%;
-        margin-bottom: 0em;
-        bottom: 6px;
-        position: relative;
-        text-align: center;
-    }
-
-    .side-r {
-        padding-bottom: 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        width: 84%;
-        flex-wrap: nowrap;
-        align-content: center;
-        position: relative;
-        top: 0%;
-    }
-
-    .side-l {
-        width: 100vw;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
-        padding-top: 0%;
-        padding-left: 0%;
-        flex-wrap: nowrap;
-        justify-content: center;
-    }
-
-    .disclaimer {
-        line-height: 1.40em;
-        font-size: 0.7em;
-        font-family: Brinnan-Light;
-        color: #cdcdcd;
-        width: 70vw;
-        text-align: center;
-    }
-
-
-
-    .side-center .lst {
-        font-size: 2em;
-        padding-left: 0em;
-        min-width: 163px;
-        text-align: left;
-        padding-left: 10px;
-    }
-
-    h3 {
-        margin: 0%;
-    }
-
-    .menu-footer {
-        display: none;
-    }
-
-    .logodown {
-        display: none;
-    }
-
-    .logo2down {
-        width: 95%;
-        min-width: 100px;
-        max-width: 956px;
-        height: auto;
-        position: relative;
-        left: 0%;
-        padding: 1px;
-        margin-bottom: 0%;
-        margin-top: 0%;
-        margin-left: 0;
-    }
-
-
-    .adress {
-        font-size: 1.35em;
-        font-family: "Brinnan-Light";
-        color: #ffffff;
-        margin-left: 0px;
-        margin-right: 0;
-        margin-bottom: 0;
-        width: 100%;
-        height: 1%;
-        text-align: center;
-        position: relative;
-        padding: 15px;
-    }
-}
