--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -103,7 +103,7 @@
     }
 
     h3 {
-        font-family: 'Beliau';
+        font-family: 'Beliau-Regular';
         font-size: 1.8em;
         margin-bottom: 1rem;
         font-weight: lighter;
